--- a/web/src/languages/en-US.json
+++ b/web/src/languages/en-US.json
@@ -92,12 +92,21 @@
   "_INPUT_BUTTON_DELETE_": "delete",
   "_INPUT_BUTTON_CANCEL_": "cancel",
   "_INPUT_BUTTON_DUPLICATE_": "duplicate",
-  "_INPUT_ERROR_100_": "There was an error. The name of the fragment already exists!",
-  "_INPUT_ERROR_101_": "There was an error. There is not a fragment whit this ID!",
-  "_INPUT_ERROR_200_": "There was an error. The name of the policy already exists!",
-  "_INPUT_ERROR_201_": "There was an error. There is not a policy whit this ID!",
-  "_INPUT_ERROR_300_": "There was an error. There is not a template whit this name!",
-  "_INPUT_ERROR_666_": "Server error. There was an error. Please try again later.",
+  "_ERROR_100_": "There was an error. The name of the fragment already exists!",
+  "_ERROR_101_": "There was an error. There is not a fragment whit this ID!",
+  "_ERROR_200_": "There was an error. The name of the policy already exists!",
+  "_ERROR_201_": "There was an error. There is not a policy whit this ID!",
+  "_ERROR_300_": "There was an error. There is not a template whit this name!",
+  "_ERROR_400_": "There was an error. You have to add at least a cube",
+  "_ERROR_401_": "There was an error. You have to add at least a cube or add an output to a trigger",
+  "_ERROR_4000_": "There is at least one cube without name",
+  "_ERROR_4001_":"There is at least one cube without dimensions",
+  "_ERROR_4002_": "The policy needs at least one output",
+  "_ERROR_4003_": "The policy needs at least one cube or one trigger",
+  "_ERROR_4004_": "There is at least one cube with a bad output",
+  "_ERROR_4005_": "There is at least one cube with triggers with a bad output",
+  "_ERROR_4006_": "There is at least one stream trigger with a bad output",
+  "_ERROR_666_": "Server error. There was an error. Please try again later.",
   "_INPUT_ERROR_TEMPLATES_": "There was an error while loading the templates! Please try again later.",
   "_OUTPUT_HEADER_TITLE_MAIN": "outputs",
   "_OUTPUT_WINDOW_NEW_TITLE_": "New output",
@@ -182,8 +191,8 @@
   "_LONG_": "Long",
   "_CUSTOM_": "Custom",
   "_SPARK_STREAMING_WINDOW_": "Spark streaming window",
-  "_CHECKPOINT_AVAILABILITY_":"Checkpoint availability",
-  "_CHECKPOINT_PATH_":"Checkpoint path",
+  "_CHECKPOINT_AVAILABILITY_": "Checkpoint availability",
+  "_CHECKPOINT_PATH_": "Checkpoint path",
   "_PERSIST_RAW_DATA_": "Persist raw data",
   "_PARTITION_FORMAT_": "Partition format",
   "_ADVANCED_SETTINGS_": "Advanced settings",
@@ -196,9 +205,6 @@
   "_OUTPUTS_FIELDS_": "Output fields",
   "_CONFIGURATION_": "Configuration",
   "_CONFIGURATION_INFO_": "JSON displayed in the textarea is for reference purposes only and it should be edited to capture the actual fields you are interested in.",
-  "_PERSIST_RAW_DATA_": "Persist raw data",
-  "_PARTITION_FORMAT_": "Partition format",
-  "_STATUS_": "Status",
   "_STORAGELEVEL_": "Storage level",
   "_URL_": "Url",
   "_JDBC_URL_": "url",
@@ -251,17 +257,14 @@
   "_OUTPUT_ACTIONS_MENU_DOWNLOAD_": "Download",
   "_OUTPUT_ACTIONS_MENU_EDIT_": "Edit",
   "_OUTPUT_ACTIONS_MENU_STOP_": "Stop",
-  "_OUTPUT_ACTIONS_MENU_DOWNLOAD_": "Download",
   "_NAME_HELP_": "White spaces are not allowed",
   "_INPUT_CREATE_FIRST_ONE_": "Click here to create your first input!",
   "_OUTPUT_CREATE_FIRST_ONE_": "Click here to create your first output!",
   "_POLICY_CREATE_FIRST_ONE_": "Click here to create your first policy!",
-  "_STATUS_": "Status",
   "_RUN_POLICY_OK_": "The policy '{{policyName}}' is running!",
   "_RUN_POLICY_KO_": "The policy '{{policyName}}' is already running! Please stop it and try again later.",
   "_STOP_POLICY_OK_": "The policy '{{policyName}}' is stopping!",
   "_STOP_POLICY_KO_": "The policy '{{policyName}}' is already stopped! Please run it and try again later.",
-  "_OUTPUT_ACTIONS_MENU_EDIT_": "Edit",
   "_REMOVE_MODEL_MESSAGE_": "If you remove this model, the following cubes will be removed: {{modelList}}",
   "_CONFIRM_": "Confirm",
   "_REMOVE_MODEL_CONFIRM_TITLE_": "Remove model",
@@ -324,7 +327,7 @@
   "_ERROR_ELEMENT_LIMIT_": "Maximun number of outputs for this transformation is ",
   "_TIMESTAMP_": "Timestamp",
   "_DATE_": "Date",
-  "_DATE_TIME_":"Date time",
+  "_DATE_TIME_": "Date time",
   "_STRING_": "String",
   "_TRIGGER_WITHOUT_SAVE_": "Your trigger has not been saved. Save or cancel its creation",
   "_REMOVE_TRIGGER_CONFIRM_TITLE_": "Remove trigger",
